test/v3/fail/type_void03.v3
//@execute 0=1
component type_void03 {
	method main(arg: int) -> int {
		local f: void = ();
		if (f == f) return 1;
		return 2;
	}
}